--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Canlı Konum Takibi</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- PWA -->
-  <link rel="manifest" href="manifest.json">
-
   <!-- Leaflet -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
   <style>
-    html, body {
+    body, html {
       margin: 0;
       padding: 0;
       height: 100%;
     }
-
     #map {
+      height: 100%;
       width: 100%;
-      height: 100vh;
     }
   </style>
 </head>
@@ -29,37 +29,66 @@
 
 <div id="map"></div>
 
-<!-- Leaflet -->
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-
-<!-- Firebase + Konum -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
   import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
 
   const firebaseConfig = {
-    apiKey: "AIzaSyDqs1-GYqpiou-vXvMS8kGN-s-79tM7iB8",
-    authDomain: "konum-takip-ec67f.firebaseapp.com",
-    databaseURL: "https://konum-takip-ec67f-default-rtdb.firebaseio.com",
-    projectId: "konum-takip-ec67f",
-    storageBucket: "konum-takip-ec67f.appspot.com",
-    messagingSenderId: "92870443325",
-    appId: "1:92870443325:web:e03043deae5a3c7b21c554"
+    apiKey: "AIzaSyAcfr0EtNvlsMfu-5dTxIw5gqetmIMGe-k",
+    authDomain: "konum-pwa-c6db4.firebaseapp.com",
+    databaseURL: "https://konum-pwa-c6db4-default-rtdb.firebaseio.com",
+    projectId: "konum-pwa-c6db4",
+    storageBucket: "konum-pwa-c6db4.appspot.com",
+    messagingSenderId: "524478665164",
+    appId: "1:524478665164:web:787c37a015e4a16e270d69"
   };
 
   const app = initializeApp(firebaseConfig);
   const db = getDatabase(app);
 
-  // Harita
-  const map = L.map("map").setView([0, 0], 2);
+  const map = L.map("map").setView([39, 35], 6);
 
   L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
     attribution: "© OpenStreetMap"
   }).addTo(map);
 
-  // Kullanıcı adı
-  const username = prompt("Kullanıcı adınızı girin:");
+  const username = prompt("Kullanıcı adını gir:");
 
-  // Konumu Firebase'e gönder
+  const markers = {};
+
   if ("geolocation" in navigator) {
-    navigator.geolocation.watchPosition(p
+    navigator.geolocation.watchPosition(pos => {
+      const lat = pos.coords.latitude;
+      const lng = pos.coords.longitude;
+
+      set(ref(db, "konumlar/" + username), {
+        lat,
+        lng,
+        time: Date.now()
+      });
+    });
+  } else {
+    alert("Konum desteklenmiyor");
+  }
+
+  onValue(ref(db, "konumlar"), snapshot => {
+    const data = snapshot.val();
+    if (!data) return;
+
+    for (const user in data) {
+      const { lat, lng } = data[user];
+
+      if (markers[user]) {
+        markers[user].setLatLng([lat, lng]);
+      } else {
+        markers[user] = L.marker([lat, lng])
+          .addTo(map)
+          .bindPopup(user);
+      }
+    }
+  });
+</script>
+
+</body>
+</html>
+
