Correct projectId syntax in firebaseConfig
Fix syntax error in firebaseConfig object.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     apiKey: "AIzaSyAcfr0EtNvlsMfu-5dTxIw5gqetmIMGe-k",
     authDomain: "konum-pwa-c6db4.firebaseapp.com",
     databaseURL: "https://konum-pwa-c6db4-default-rtdb.firebaseio.com",
-    projectId: "konum-pwa-c6db4",
+    projectId "konum-pwa-c6db4",: 
     storageBucket: "konum-pwa-c6db4.appspot.com",
     messagingSenderId: "524478665164",
     appId: "1:524478665164:web:787c37a015e4a16e270d69"
